--- a/README.adoc
+++ b/README.adoc
@@ -34,6 +34,10 @@ The Spring HATEOAS community has its own contributions when it comes to examples
 
 [source,sh]
 ----
-docker build -t nightmaretk/kovagger-backend-java8:v1.0 .
-docker run -p 8081:8080 nightmaretk/kovagger-backend-java8:v1.0
+cd spring-hateoas-and-spring-data-rest/ && \
+    ../mvnw clean package -DskipTests && \
+    java -Djarmode=layertools -jar target/*.jar extract --destination target/extracted
+
+docker build -t nightmaretk/kovagger-backend-java8:4.0 .
+docker run -p 8081:8080 nightmaretk/kovagger-backend-java8:4.0
 ----
